--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 VUE_APP_PROJECT = "https://github.com/tech-fever/sub-web"
 
-VUE_APP_BOT_LINK = "https://t.me/Thebigbang_bot"
+VUE_APP_BOT_LINK = "https://t.me/subconverter_discuss"
 
 VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/releases"
 
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/tindy2013/subconverter/master/base/config/example_external_config.ini"
 
 # API 后端
-VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://suc.pawswrite.xyz"
+VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://app.zjy7788.xyz"
 
 # 短链接后端
-VUE_APP_MYURLS_DEFAULT_BACKEND = "https://suo.yt"
+VUE_APP_MYURLS_DEFAULT_BACKEND = "https://sufdfo.ydt"
 
 # 文本托管后端
-VUE_APP_CONFIG_UPLOAD_BACKEND = "https://suc.pawswrite.xyz"
+VUE_APP_CONFIG_UPLOAD_BACKEND = "https://app.zjy7788.xyz"
 
 # 页面配置
 VUE_APP_USE_STORAGE = true 
