--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@ VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/releases"
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/tindy2013/subconverter/master/base/config/example_external_config.ini"
 
 # API 后端
-VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://abcrailw.zjy7788.xyz"
+VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "http://192.168.50.5:9500"
 
 # 短链接后端
 VUE_APP_MYURLS_DEFAULT_BACKEND = "https://sufdfo.ydt"
 
 # 文本托管后端
-VUE_APP_CONFIG_UPLOAD_BACKEND = "https://abcrailw.zjy7788.xyz"
+VUE_APP_CONFIG_UPLOAD_BACKEND = "http://192.168.50.5:9500"
 
 # 页面配置
 VUE_APP_USE_STORAGE = true 
